# AgentCore

./: .gitignore  README.md  agent-core.md  pyproject.toml
agent_core/: architecture.md
agent_core/config/: agent_config.py
agent_core/context/: context_builder.py  llm_summarization_policy.py  summarization_policy.py  token_budget.py
agent_core/engine/: __init__.py  decision_engine.py  loop_controller.py  similarity_port.py  stagnation_detector.py  termination_engine.py
agent_core/llm/: llm_adapter.py  model_registry.py
agent_core/observability/: metrics.py  trace_port.py  tracing.py
agent_core/planning/: executor.py  phase_manager.py  planner.py
agent_core/profiles/: profile_interface.py
agent_core/state/: agent_state.py  agent_tree.py  evidence_graph.py  hypothesis.py  memory_layers.py  stack_tree.py  working_set.py
agent_core/storage/: state_store.py
agent_core/tools/: sandbox.py  tool_policy.py  tool_registry.py
tests/: conftest.py  test_agent_tree_scheduler.py  test_context_trimming.py  test_es_failure_surface.py  test_evidence_pruning.py  test_llm_summarization_policy.py  test_llm_trace_context.py  test_loop_phase_shift_gating.py  test_phase_tool_visibility.py  test_planner_executor_isolation.py  test_recent_actions_and_summarization.py  test_stack_collapse.py  test_stagnation_detector.py  test_stagnation_new_features.py  test_termination_engine.py  test_tool_failure_feedback.py  test_tool_policy_enforcement.py
